# newWebNavigation

./: CMakeLists.txt  main  main.cpp  navigation.cpp  navigation.h  resources.qrc
